@@ -1,3 +1,4 @@
+211102 auto propagation: remove cpu value propagation
 211101 auto propagation: gpu value propagation
 211031 auto propagation: shrunk graph building alg fix
 211027 auto propagation: issue: value propagation slow
